--- a/part-3/grocer.css
+++ b/part-3/grocer.css
@@ -120,7 +120,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  border: 5px solid black;
+  border: 4px solid black;
   width: 400px;
   max-width: 100%;
   height: 300px;
@@ -129,13 +129,11 @@ body {
 }
 
 .modal-body {
-  display: flex;
-  flex-direction: column;
   position: absolute;
   width: 100%;
   height: 100%;
   background-color: white;
-  overflow: auto;
+  overflow: scroll;
 }
 
 .modal-overlay {
@@ -159,11 +157,14 @@ body {
 .grid.list {
   display: flex;
   align-items: center;
+  z-index: 0;
 }
 
-.grid.bottom {
+.grid.footer{
   margin-right: 20px;
   margin-left: 20px;
+  background-color: white;
+  z-index: 1;
 }
 
 .cell {
@@ -191,12 +192,20 @@ body {
 .cart-header {
   margin-left: 20px;
   margin-right: 20px;
+  background-color: white;
+  z-index: 1;
   display: flex;
   justify-content: space-between;
 }
 
 .total-amount {
   float: right;
+}
+
+.header {
+  height: 75px;
+  background-color: white;
+  margin: auto;
 }
 
 .button-cell {
